--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <title>Blog Pribadi</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Blog Wika Aditya Pradani</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Blog Pribadi Saya</h1>
-    <p>Halo, ini posting pertama di blog sederhana saya!</p>
+<body class="bg-light">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand" href="#">Blog Wika</a>
+    </div>
+  </nav>
+
+  <div class="container mt-5">
+    <div class="text-center mb-4">
+      <h1 class="display-4">Selamat Datang di Blog Saya!</h1>
+      <p class="lead">Berikut beberapa postingan yang saya simpan di Amazon S3</p>
+    </div>
+
+    <div class="row">
+      <!-- Postingan 1 -->
+      <div class="col-md-6">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Postingan 1</h5>
+            <p class="card-text">Ini adalah postingan pertama saya yang disimpan di S3.</p>
+            <a href="https://s3-region.amazonaws.com/backup-blog-namaanda/index.html" class="btn btn-primary" target="_blank">Baca Postingan</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tambahkan postingan lain di bawah ini jika ada -->
+    </div>
+  </div>
+
+  <footer class="bg-primary text-white text-center py-3 mt-5">
+    <p class="mb-0">Wika Aditya Pradani - 152022119</p>
+  </footer>
+
 </body>
 </html>
