--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="bg-light">
   <div class="container mt-5">
-    <h2 class="text-center mb-4">152022119 - Wika Aditya - Blog  📂</h2>
+    <h2 class="text-center mb-4">152022119 - Wika Aditya Pradani</h2>
    
     
     <!-- Upload Form -->
